# maptask-deberta-pair

./: README.md  pyproject.toml
notebooks/: prediction.ipynb  training.ipynb  upload.ipynb
