[tool.poetry]
name = "maptask-deberta-pair"
version = "0.1.0"
description = "Deberta-based Daily Dialog style dialog-act annotations classification model"
authors = ["Diwank Singh <diwank.singh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
simpletransformers = "^0.63.4"
transformers = "^4.16.2"
huggingface = "^0.0.1"
huggingface-hub = "^0.4.0"
datasets = "^1.18.2"
torch = "^1.10.2"
pandas = "^1.4.0"
wandb = "^0.12.10"
jupyter = "^1.0.0"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
